test/sema/untyped-null.delta.output
untyped-null.delta:5:9: error: couldn't infer type of 'foo', add a type annotation
    var foo = null;
        ^
