test/sema/untyped-null.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:9: error: couldn't infer type of 'foo', add a type annotation
    var foo = null;
}
